syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "DataChangeTypeConfigUpdateField";

package nem;



message DataChangeTypeConfigUpdateField {  
    string field_uuid = 1;
    string current_value = 2;
    string new_value = 3;    
}
